API ChangeLog	(see the ChangeLog in each 'apps' directory for
		app specific changes

08-Aug-2002     Troy A. Griffitts <scribe@crosswire.org>
	Added support for new entry in /etc/sword.conf
		[Install]
			AugmentPath=/where/ever
		multiple entries can exist.

31-Jul-2002	Daniel Glassey <dglassey@crosswire.org>
	Minor change to use iostream not iostream.h (more gcc3)

31-Jul-2002     Troy A. Griffitts <scribe@crosswire.org>
	Fixed FileMgr::trunc if trunc should be empty was
		leaving a 1 byte (null) file, instead of empty.

30-Jul-2002     Troy A. Griffitts <scribe@crosswire.org>
	Fixed zLD link bug where resolving incorrectly
		skipped IDXENTRYSIZE instead of 6 ("@LINK ").
	Fixed RawLD link errors.
	Allocate buffer for RawStr* drivers in readtext
		to allow realloc if link

29-Jul-2002     Victor Porton <porton@narod.ru>
	Fixed RawLD and RawLD4 drivers not reporting errors in
	getRawEntry()

28-Jul-2002     Troy A. Griffitts <scribe@crosswire.org>
	Added Gregor Anzelj's Slovenian (sl.conf) locale.

27-Jul-2002     Troy A. Griffitts <scribe@crosswire.org>
	lex/dict drivers use new toupperstr_utf8 to allow
		keys to be encoded in utf8 (hopefully will
		allow cedict to be built/work correctly.
	Added toupperstr_utf8 to utilstr.cpp
	Make all operators have real name methods
	Isolated SWModule operators in define
	Fixed RawLD and RawLD4 drivers where there was
		a blank entry created at the beginning
	Added test lextest
	Consolidated setPosition for lexicons in SWLD

16-Jul-2002	Daniel Glassey <dglassey@crosswire.org>
	utf8transliterator now loads translators from local
		sword ICU data on demand
	SWMgr loads a UTF8Transliterator filter along with
		other filters on Load

11-Jul-2002	Daniel Glassey <dglassey@crosswire.org>
	simple fixes to allow compiling with gcc 3.1
	rename gettext to readtext as unobtrusively as
		possible.
	fix BGreek_Greek trans to work with icu2.1
	add SWMgr::isICU for apps to check if ICU stuff is
		available
